--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -3,9 +3,128 @@ body {
 	font: normal 14px/160% Verdana, sans-serif;
 }
 
-.section:first-child {
-	background: black;
+@font-face {
+	font-family: Fontin;
+	src: url(../fonts/Fontin.otf);
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font: bold 40px/100% Fontin;
+	margin-bottom: 5px;
+	margin-top: 10px;
+}
+
+h1 { font-size: 60px; }
+h2 { font-size: 50px; }
+h3 { font-size: 40px; }
+h4 { font-size: 35px; }
+h5 { font-size: 30px; }
+h6 { font-size: 25px; }
+
+p {
+	padding: 10px;
+}
+
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 10px;
+	max-width: 400px;
+}
+
+ul li {
+	clear: left;
+	display: inline-block;
+	float: left;
+	width: 100%;
+}
+
+ul b {
+	float: left;
+}
+
+ul i {
+	float: right;
+}
+
+header {
+	padding: 15px;
+	position: absolute;
+	top: 0;
+	vertical-align: middle;
+	z-index: 100;
+}
+header div {
+	
+}
+header a {
+	color: #DDD;
+	display: inline-block;
+	font: bold 20px/100% Fontin;
+	height: 20px;
+	padding: 20px 15px;
+	text-decoration: none;
+	vertical-align: middle;
+}
+header a:hover {
 	color: white;
+}
+#logo-link {
+	font: bold 30px/100% Fontin;
+	height: 40px;
+	padding: 10px 20px;
+}
+#logo {
+	display: inline-block;
+	height: 40px;
+	position: relative;
+	vertical-align: middle;
+}
+header .left {
+	float: left;
+}
+header .right {
+	float: right;
+}
+
+.section .background {
+	position: fixed;
+	top: -50%;
+	left: -50%;
+	width: 200%;
+	height: 200%;
+	z-index: -2;
+}
+.section .background img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
+	min-width: 50%;
+	min-height: 50%;
+}
+
+.section .content {
+	margin: auto;
+	max-width: 800px;
+	padding: 10px;
+}
+.section .content .info-box {
+	background: rgba(0, 0, 0, 0.2);
+	border-radius: 3px;
+	padding: 10px 15px;
+}
+
+.section:first-child {
+	color: white;
+	font: normal 20px/160% Verdana;
+}
+#intro-header {
+	text-align: center;
+	margin-bottom: 20px;
+	margin-top: 0;
 }
 
 .section:nth-child(2) {
@@ -14,6 +133,24 @@ body {
 }
 
 .section:nth-child(3) {
-	background: #EEE;
-	color: #222;
+	background: #040404;
+	color: #EEE;
+}
+
+@media screen and ( max-width: 700px ) {
+	
+	header a {
+		position: absolute;
+		visibility: hidden;
+		width: 100%;
+	}
+	
+	#logo {
+		left: 50vw;
+		margin-left: -40px;
+		position: absolute;
+		top: 15px;
+		visibility: visible;
+	}
+	
 }
