--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -145,6 +145,17 @@ header .right {
 		width: 100%;
 	}
 	
+	h1 { font-size: 40px; }
+	h2 { font-size: 38px; }
+	h3 { font-size: 36px; }
+	h4 { font-size: 34px; }
+	h5 { font-size: 32px; }
+	h6 { font-size: 30px; }
+	
+	.section:first-child {
+		font: normal 16px/160% Verdana;
+	}
+	
 	#logo {
 		left: 50vw;
 		margin-left: -40px;
