--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -1,14 +1,88 @@
 
 body {
-	background: #A6534D;
-	color: #EEE;
+	background: #111;
+	color: #EDD;
 	font: normal 16px/100% Verdana, sans-serif;
 }
 
-.notification {
-	background: #FAAE1C;
-	color: #474133;
-	padding: 10px;
-	text-align: center;
-	width: 100%;
+p {
+	font: normal 22px/140% Verdana, sans-serif;
+	padding: 20px;
+}
+
+p.main {
+	font: normal 60px/140% Verdana, sans-serif;
+}
+
+p em {
+	color: #D90045;
+}
+
+header.main {
+	display: block;
+	height: 60px;
+	margin: 40px;
+}
+
+header.main a {
+	display: inline-block;
+	float: right;
+	padding: 20px;
+	font: normal 20px/100% Roboto;
+	margin: 0 5px;
+	cursor: pointer;
+	text-decoration: none;
+}
+
+header.main a:hover {
+	background: #333;
+}
+
+header.main a.logo {
+  height: 40px;
+  background: #D90045;
+  padding: 10px 20px;
+  font: normal 38px/100% Amatic SC;
+  text-align: center;
+  float: left;
+  margin-right: 10px;
+}
+
+header.main a.logo {
+	background: none;
+}
+
+.big-notification {
+  height: 40px;
+  background: #D90045;
+  padding: 10px 0px;
+  font: normal 38px/100% Amatic SC;
+  text-align: center;
+  display: inline-block;
+  float: left;
+  margin-right: 10px;
+	position: absolute;
+	top: calc(50% - 30px);
+  width: 100%;
+	z-index: 1000;
+}
+
+.background {
+	position: fixed;
+	top: -50%;
+	left: -50%;
+	width: 200%;
+	height: 200%;
+	z-index: -2;
+}
+
+.background img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
+	min-width: 50%;
+	min-height: 50%;
 }
