--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -11,11 +11,16 @@ p {
 }
 
 p.main {
-	font: normal 60px/140% Verdana, sans-serif;
+	font: normal 48px/130% Roboto;
+	padding: 0 40px 30px;
 }
 
 p em {
 	color: #D90045;
+}
+
+a {
+	color: #EDD;
 }
 
 header.main {
@@ -24,7 +29,7 @@ header.main {
 	margin: 40px;
 }
 
-header.main a {
+header.main a.go {
 	display: inline-block;
 	float: right;
 	padding: 20px;
@@ -34,7 +39,7 @@ header.main a {
 	text-decoration: none;
 }
 
-header.main a:hover {
+header.main a.go:hover {
 	background: #333;
 }
 
@@ -48,8 +53,9 @@ header.main a.logo {
   margin-right: 10px;
 }
 
-header.main a.logo {
-	background: none;
+header.main a.logo:hover {
+	background: #D90045;
+	color: white;
 }
 
 .big-notification {
@@ -85,4 +91,17 @@ header.main a.logo {
 	margin: auto;
 	min-width: 50%;
 	min-height: 50%;
+}
+
+@media (max-width: 600px) {
+	
+	p.main {
+		font: normal 30px/140% Roboto;
+		padding: 0 30px 30px;
+	}
+	
+	header.main a.go {
+		padding: 20px 5px;
+	}
+	
 }
