--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,11 @@
 		<div class="big-notification">
 			Under Construction
 		</div>
-		<header class="main-header">
+		<header class="main">
 			<a href="/" class="logo">FELIX</a>
-			<a href="/contact">Contact</a>
-			<a href="/blog">Blog</a>
-			<a href="/projects">Projects</a>
+			<a href="/contact" class="go">Contact</a>
+			<a href="/blog" class="go">Blog</a>
+			<a href="/projects" class="go">Projects</a>
 		</header>
 		<div class="content">
 			{{ content }}
