Minor adjustments and fixes
I really should just install Jekyll on my machine

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="/assets/css/reset.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto:300|Amatic+SC:700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="/assets/css/default.css">
+		<meta content="width=device-width, user-scalable=false, initial-scale=1" name="viewport">
 	</head>
 	<body>
 		<div class="big-notification">
