Change projects to Work

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 		<header class="main">
 			<a href="/" class="logo">FELIX</a>
 			<nav>
-				<a href="/projects" class="go">Projects</a>
+				<a href="/work" class="go">Work</a>
 				<a href="/blog" class="go">Blog</a>
 				<a href="/contact" class="go">Contact</a>
 			</nav>
